--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,9 +4,9 @@
     <title>Subir Archivo</title>
 </head>
 <body>
-    <h1>Sube tu archivo .mp3</h1>
+    <h1>Sube tu archivo .mp3 o de otro formato de audio</h1>
     <form method="post" enctype="multipart/form-data">
-        <input type="file" name="file" accept=".mp3" required>
+        <input type="file" name="file" required>
         <button type="submit">Subir</button>
     </form>
 </body>
